--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,20 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+apply plugin: 'com.github.dcendents.android-maven'
 
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://dl.bintray.com/arulkumar/LibApp/' }
     }
 }
 
