--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 24
@@ -22,4 +24,54 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
+}
+
+task generateSourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier 'sources'
+}
+
+task generateJavadocs(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath()
+            .join(File.pathSeparator))
+    failOnError false
+}
+
+task generateJavadocsJar(type: Jar) {
+    from generateJavadocs.destinationDir
+    classifier 'javadoc'
+}
+
+generateJavadocsJar.dependsOn generateJavadocs
+
+artifacts {
+    archives generateJavadocsJar
+    archives generateSourcesJar
+}
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+bintray {
+    user = 'arulkumar'
+    key = '555052906606f31383f646eea8ee1c92486cf2d6'
+
+    pkg {
+        repo = 'LibApp'
+        name = 'lib-app'
+
+        version {
+            name = '1.0.0'
+            desc = 'My Test'
+            released  = new Date()
+            vcsTag = '1.0.1'
+        }
+
+        vcsUrl = 'https://github.com/kumararul/LibApp.git'
+        websiteUrl = 'https://github.com/kumararul/LibApp'
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
+    configurations = ['archives']
 }
